libcm4all-was (1.27) unstable; urgency=low

  * simple: discard the remaining request body before finishing the response

 --   

libcm4all-was (1.26) unstable; urgency=low

  * protocol: add packet METRIC

 -- Max Kellermann <mk@cm4all.com>  Tue, 28 Feb 2023 13:00:33 +0100

libcm4all-was (1.25) unstable; urgency=low

  * simple: reduce header/parameter lookup overhead
  * simple: generate status 414/431 if control packet is too large
  * simple: allow request URIs and headers up to 8000 bytes
  * suppress clang warnings from APR/libapreq2 headers

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Dec 2022 12:39:05 +0100

libcm4all-was (1.24) unstable; urgency=low

  * protocol: add packet REMOTE_HOST

 -- Max Kellermann <mk@cm4all.com>  Thu, 28 Apr 2022 20:07:10 +0200

libcm4all-was (1.23) unstable; urgency=low

  * include was/multi.h in Debian package

 -- Max Kellermann <mk@cm4all.com>  Mon, 30 Aug 2021 19:29:28 +0200

libcm4all-was (1.22) unstable; urgency=low

  * simple: close file descriptors in _free()
  * multi: simple MultiWAS implementation

 -- Max Kellermann <mk@cm4all.com>  Mon, 30 Aug 2021 19:19:37 +0200

libcm4all-was (1.21) unstable; urgency=low

  * simple: add was_simple_new_fds()
  * protocol: extension for multiple WAS connections to one server process

 -- Max Kellermann <mk@cm4all.com>  Thu, 26 Aug 2021 09:50:56 +0200

libcm4all-was (1.20) unstable; urgency=low

  * simple: make several parameters "const"
  * meson.build: add option to disable the libapreq2 module
  * meson.build: add option to disable the libcore-xios implementation

 -- Max Kellermann <mk@cm4all.com>  Wed, 28 Apr 2021 18:25:47 +0200

libcm4all-was (1.19) unstable; urgency=low

  * simple: make the response end optional in was_simple_splice_all()

 -- Max Kellermann <mk@cm4all.com>  Thu, 27 Aug 2020 16:10:36 +0200

libcm4all-was (1.18) unstable; urgency=low

  * simple: add was_simple_splice(), was_simple_splice_all()
