@@ -1,6 +1,7 @@
 libcm4all-was (1.27) unstable; urgency=low
 
   * simple: discard the remaining request body before finishing the response
+  * simple: use splice() to discard the unused request body
 
  --   
 
